--- a/src/main/resources/plugin/plugin.xml
+++ b/src/main/resources/plugin/plugin.xml
@@ -6,7 +6,7 @@
 http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context.xsd">
 
 
-    <context:component-scan base-package="com.plugin"/>
+    <context:component-scan base-package="com.mybatis"/>
 
 
     <bean class="org.springframework.jdbc.datasource.DriverManagerDataSource" id="dataSource">
@@ -16,7 +16,7 @@ http://www.springframework.org/schema/context http://www.springframework.org/sch
         <property name="password" value="root"/>
     </bean>
 
-    <bean class="com.plugin.utils.ASqlSessionFactoryBean" id="sqlSessionFactory">
+    <bean class="com.reload.dao.utils.ASqlSessionFactoryBean" id="sqlSessionFactory">
         <property name="dataSource" ref="dataSource"/>
         <!--<property name="mapperLocations" value="classpath*:plugin/mapper/user-mapper.xml"/>-->
         <property name="mapperLocations" value="file:/Users/ssysong/git/learning/user-mapper.xml"/>
@@ -34,7 +34,7 @@ http://www.springframework.org/schema/context http://www.springframework.org/sch
 
 
     <bean class="org.mybatis.spring.mapper.MapperScannerConfigurer">
-        <property name="basePackage" value="com.plugin.dao"/>
+        <property name="basePackage" value="com.mybatis.dao"/>
         <property name="sqlSessionFactoryBeanName" value="sqlSessionFactory"/>
     </bean>
 
